--- a/main.html
+++ b/main.html
@@ -193,7 +193,7 @@
   <!-- copyright -->
   <div class="copyright">
     <div class="copyright-text">
-      <p>Copyright 2024 By Namoc, Gabila, Sarad, and Canaway</p>
+      <p>©Copyright 2024 By Namoc, Gabila, Sarad, and Canaway, Quiñones</p>
     </div>
   </div>
 
