--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
   <!-- copyright -->
   <div class="copyright">
     <div class="copyright-text">
-      <p>©Copyright 2024 By Namoc, Gabila, Sarad, and Canaway, quinoñes</p>
+      <p>©Copyright 2024 By Namoc, Gabila, Sarad, and Canaway, Quiñones</p>
     </div>
   </div>
 
