--- a/main.html
+++ b/main.html
@@ -110,7 +110,7 @@
   <p>Seating</p>
   <a href="menu/tables.html"><img src="image/home2.jpg"></a>
   <p>Tables</p>
-  <a href="seating.html"><img src="image/home3.jpg"></a>
+  <a href="menu/storage.html"><img src="image/home3.jpg"></a>
   <p>Storage</p>
 </div>
 
